Revision history for DBD::Oracle

NEXT_VERSION

  [BUG FIXES]

  - Fix RT80349 - The error message in execute_for_fetch when a row fails
    can contain the wrong error count. Thanks to Steffen Goeldner for
    RT and patch.

  - Fix RT80375 - no exception when execute_for_fetch fails and
    ArrayTupleStatus is not specified. Also the tuple count calculation
    resulted in an undefined warning. Thanks to Steffen Goeldner for
    RT and patches.

  - Fix RT80487. Skip XMLType tests if Oracle less than V9. Thanks to
    Steffen Goeldner.

  - Fix RT80486 for 31lob_extended.t. In old old Oracle8,
    SYS_REFCURSOR is not defined. Instead of CREATE/DROP PROCEDURE,
    use anonymous block. Thanks to Steffen Goeldner.

  [MISCELLANEOUS]

  - The original 26exe_array test was replaced some time ago with a
    copy of the one from DBD::ODBC. Since then I've fixed issues in
    the DBD::ODBC one and added more tests (like tests for some RTs
    above). To make keeping them in synch easier I've modularised the
    tests. Hence new ExecuteArray.pm. (Martin J. Evans)


1.52      2012-10-19

 - promote 1.51_00 to official release

1.51_00   2012-09-28

  [BUG FIXES]

  - fix serious memory corruption in TAF support (Martin J. Evans)

  - fix finding client in situation where client and server both
    installed but different architectures (patch by H.Merijn Brand)

  - fix memory leak in TAF handling - the TAF function was leaked
    (Martin J. Evans)

  - fix issue with taf_function being set to a scalar which goes
    out of scope before the callback is made (Martin J. Evans)

  - fix RT46739 if a connection breaks the environment handle is
    not thrown away (Martin J. Evans)

  - ora_driver_name was not defaulted to the correct DBD::Oracle
    version (Martin J. Evans)

  - ora_driver_name, ora_client_info, ora_client_identifier,
    ora_action and ora_oci_success_warn were set twice (if specified)
    on connect as they were not deleted from the connect attributes